--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "ce-website-angular": "file:",
     "firebase": "^11.2.0",
     "fuel-flow-web": "file:",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "moment": "^2.30.1",
     "ngx-mask": "^19.0.6",
     "rxjs": "^7.8.1",
